Pract12metadependson.tf
# resource "azurerm_resource_group" "example" {
#   name     = "deep-rg1"
#   location = "West Europe"
# }

# resource "azurerm_public_ip" "example" {
#   name                = "deep-ip"
#   resource_group_name = azurerm_resource_group.example.name
#   location            = azurerm_resource_group.example.location
#   allocation_method   = "Static"
#   tags = {
#     environment = "Production"
#   }
#   depends_on = [ azurerm_resource_group.example ]
# }
